--- a/HackMD/HackMD.csproj
+++ b/HackMD/HackMD.csproj
@@ -8,10 +8,10 @@
         <RootNamespace>Community.PowerToys.Run.Plugin.HackMD</RootNamespace>
         <Version>$([System.Text.RegularExpressions.Regex]::Match([System.IO.File]::ReadAllText('.\plugin.json'), '"Version": "(\S+)"').Groups[1].Value)</Version>
         <Platforms>x64;ARM64</Platforms>
-        <Title></Title>
-        <Product></Product>
-        <Authors></Authors>
-        <RepositoryUrl></RepositoryUrl>
+        <Title>PowerToys Run HackMD plugin</Title>
+        <Product>PowerToys Run HackMD plugin</Product>
+        <Authors>8LWXpg</Authors>
+        <RepositoryUrl>https://github.com/8LWXpg/PowerToysRun-HackMD</RepositoryUrl>
     </PropertyGroup>
 
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
